After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737102 - queue: Do not hold GST_QUEUE_LOCK while posting ERROR messages
queue: Do not hold GST_QUEUE_LOCK while posting ERROR messages
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 1.4.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-22 07:40 UTC by Thibault Saunier
Modified: 2014-09-22 14:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
queue: Do not hold GST_QUEUE_LOCK while posting ERROR messages (1.73 KB, patch)
2014-09-22 07:40 UTC, Thibault Saunier
none Details | Review
queue: Do not hold GST_QUEUE_LOCK while posting ERROR messages (1.73 KB, patch)
2014-09-22 07:49 UTC, Thibault Saunier
committed Details | Review

Description Thibault Saunier 2014-09-22 07:40:21 UTC
We should avoid holding element specific lock while posting messages on the bus.
Comment 1 Thibault Saunier 2014-09-22 07:40:24 UTC
Created attachment 286779 [details] [review]
queue: Do not hold GST_QUEUE_LOCK while posting ERROR messages

This might create deadlocks and we need to avoid holding element
specific lock while posting messages

For example a deadlock will happen if while posting the message,
someone connected on the bus (sync) tries to DOT the pipeline.
Comment 2 Thibault Saunier 2014-09-22 07:49:49 UTC
Created attachment 286780 [details] [review]
queue: Do not hold GST_QUEUE_LOCK while posting ERROR messages

This might create deadlocks and we need to avoid holding element
specific lock while posting messages

For example a deadlock will happen if while posting the message,
someone connected on the bus (sync) tries to DOT the pipeline.
Comment 3 Nicolas Dufresne (ndufresne) 2014-09-22 13:35:56 UTC
<slomo> thiblahute: ↑ please merge into 1.4 :)
Comment 4 Thibault Saunier 2014-09-22 14:13:20 UTC
Attachment 286780 [details] pushed as b189949 - queue: Do not hold GST_QUEUE_LOCK while posting ERROR messages